Publish the benchmark, refactor the console and add coverage aggregation